feat: Add tag APIs
